compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__const_type_variable.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nfn identity(a: a) -> a {\n  a\n}\n\nconst id: fn(a) -> a = identity\n"
---
----- SOURCE CODE

fn identity(a: a) -> a {
  a
}

const id: fn(a) -> a = identity


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
