compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__constant_aliased_string_in_bit_array_segment_test_with_utf8_option.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nconst wibble = \"a\"\nconst wobble = wibble\n\npub fn main() {\n  let _ = <<wobble:utf8>>\n  Nil\n}\n"
---
----- SOURCE CODE

const wibble = "a"
const wobble = wibble

pub fn main() {
  let _ = <<wobble:utf8>>
  Nil
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-file("project/test/my/mod.gleam", 5).
-spec main() -> nil.
main() ->
    _ = <<"a"/binary>>,
    nil.
