compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__constant_imported_aliased_string_in_bit_array_segment_test_with_utf16_option_2.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport some_module\n\nconst wobble = some_module.wibble\nconst wubble = wobble\n\npub fn main() {\n  let _ = <<wubble:utf16>>\n  Nil\n}\n"
---
----- SOURCE CODE

import some_module

const wobble = some_module.wibble
const wubble = wobble

pub fn main() {
  let _ = <<wubble:utf16>>
  Nil
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> nil.
main() ->
    _ = <<(some_module:wibble())/utf16>>,
    nil.
