compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__constant_imported_aliased_string_in_string_concatenation_in_guard.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport some_module\n\nconst wobble = some_module.wibble\nconst wubble = wobble\n\npub fn go(x) {\n  case x {\n    x if x == wubble <> \"b\" -> todo\n    _ -> todo\n  }\n}\n"
---
----- SOURCE CODE

import some_module

const wobble = some_module.wibble
const wubble = wobble

pub fn go(x) {
  case x {
    x if x == wubble <> "b" -> todo
    _ -> todo
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> any().
go(X) ->
    _value = some_module:wibble(),
    case X of
        X@1 when X@1 =:= <<_value/binary, "b"/utf8>> ->
            erlang:error(#{
                gleam_error => todo,
                message => ~"`todo` expression evaluated. This code has not yet been implemented.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 9
            });

        _ ->
            erlang:error(#{
                gleam_error => todo,
                message => ~"`todo` expression evaluated. This code has not yet been implemented.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 10
            })
    end.
