compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__constant_string_concatenation_with_qualified_remote_constant.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport mod\npub const greeting = \"Hello, \" <> mod.name <> \"!\"\n"
---
----- SOURCE CODE

import mod
pub const greeting = "Hello, " <> mod.name <> "!"


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([greeting/0]).

-spec greeting() -> binary().
greeting() ->
    <<"Hello, "/utf8, (mod:name())/binary, "!"/utf8>>.
